--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-TERRAFORM_KEY="APP_NAME"
+TERRAFORM_KEY="launch"
 TERRAFORM_STATE_BUCKET="tyrsius-terraform-state"
-SITE_DOMAIN="APP_NAME.kye.dev"
+SITE_DOMAIN="launch.kye.dev"
 VITE_AUTH0_CLIENT_ID=""
 VITE_AUTH0_DOMAIN="kyeotek-auth0.kye.dev"
