--- a/deno.json
+++ b/deno.json
@@ -12,7 +12,7 @@
   },
   "imports": {
     "@kitsonk/kv-toolbox": "jsr:@kitsonk/kv-toolbox@^0.27.4",
-    "@kyeotic/server": "jsr:@kyeotic/server@^1.2.1",
+    "@kyeotic/server": "jsr:@kyeotic/server@^1.4.14",
     "@negrel/webpush": "jsr:@negrel/webpush@^0.3.0",
     "@std/assert": "jsr:@std/assert@1",
     "@std/encoding": "jsr:@std/encoding@0.224.0",
@@ -25,10 +25,10 @@
     "nanoid": "npm:nanoid@^5.1.5",
     "superjson": "npm:superjson@^2.2.2",
     "url-join": "npm:url-join@^5.0.0",
-    "zod": "npm:zod@^3.24.2"
+    "zod": "npm:zod@^3.25.48"
   },
   "deploy": {
-    "project": "kyeotic-APP_NAME",
+    "project": "kyeotic-launch",
     "exclude": ["**/node_modules"],
     "include": ["src/server", "dist/", "./deno.json"],
     "entrypoint": "src/server/server.ts"
