--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,6 @@ TERRAFORM_STATE_BUCKET="tyrsius-terraform-state"
 SITE_DOMAIN="launch.kye.dev"
 VITE_AUTH0_CLIENT_ID=""
 VITE_AUTH0_DOMAIN="kyeotek-auth0.kye.dev"
+DISCORD_KITCHEN_WEBHOOK="https://discord.com/api/webhooks/< webhook id>"
+DISCORD_LAUNDRY_WEBHOOK="https://discord.com/api/webhooks/< webhook id>"
+DISCORD_DEBUG_WEBHOOK="https://discord.com/api/webhooks/< webhook id>"
