--- a/deno.json
+++ b/deno.json
@@ -24,6 +24,7 @@
     "lodash": "npm:lodash-es@^4.17.21",
     "nanoid": "npm:nanoid@^5.1.5",
     "superjson": "npm:superjson@^2.2.2",
+    "ts-pattern": "npm:ts-pattern@^5.7.1",
     "url-join": "npm:url-join@^5.0.0",
     "zod": "npm:zod@^3.25.48"
   },
